@@ -1,5 +1,10 @@
 package com.unicloudapp.group.infrastructure.persistence;
 
+import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.hasCloudResourceAccess;
+import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.hasPastExpiresDate;
+import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.hasStatus;
+import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.nameLike;
+
 import com.unicloudapp.common.group.GroupCloudDto;
 import com.unicloudapp.common.group.GroupDto;
 import com.unicloudapp.common.group.GroupUniqueName;
@@ -13,16 +18,6 @@ import com.unicloudapp.group.application.GroupRowProjection;
 import com.unicloudapp.group.application.port.GroupRepositoryPort;
 import com.unicloudapp.group.domain.Group;
 import com.unicloudapp.group.domain.vo.GroupStatus;
-import lombok.RequiredArgsConstructor;
-import org.jspecify.annotations.NonNull;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.jpa.domain.Specification;
-import org.springframework.data.jpa.repository.EntityGraph;
-import org.springframework.data.jpa.repository.JpaRepository;
-import org.springframework.stereotype.Repository;
-import org.springframework.transaction.annotation.Transactional;
-
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -31,11 +26,16 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
-
-import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.hasCloudResourceAccess;
-import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.hasPastExpiresDate;
-import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.hasStatus;
-import static com.unicloudapp.group.infrastructure.persistence.GroupSpecifications.nameLike;
+import lombok.RequiredArgsConstructor;
+import org.jetbrains.annotations.NotNull;
+import org.jspecify.annotations.NonNull;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
+import org.springframework.data.jpa.repository.EntityGraph;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+import org.springframework.transaction.annotation.Transactional;
 
 @Repository
 @RequiredArgsConstructor
@@ -46,17 +46,12 @@ class SqlGroupRepositoryAdapter implements GroupRepositoryPort {
 
     @Override
     public Group save(Group group) {
-        return groupToEntityMapper.toDomain(
-                groupJpaRepository.save(
-                        groupToEntityMapper.toEntity(group)
-                )
-        );
+        return groupToEntityMapper.toDomain(groupJpaRepository.save(groupToEntityMapper.toEntity(group)));
     }
 
     @Override
     public Optional<Group> findById(UUID id) {
-        return groupJpaRepository.findById(id)
-                .stream()
+        return groupJpaRepository.findById(id).stream()
                 .map(groupToEntityMapper::toDomain)
                 .findFirst();
     }
@@ -67,18 +62,13 @@ class SqlGroupRepositoryAdapter implements GroupRepositoryPort {
     }
 
     @Override
-    public boolean existsByNameAndSemester(GroupName name,
-                                           Semester semester
-    ) {
+    public boolean existsByNameAndSemester(GroupName name, Semester semester) {
         return groupJpaRepository.existsByNameAndSemester(name.getName(), semester.toString());
     }
 
     @Override
-    public Page<GroupRowProjection> findAllByCriteria(
-            GroupFilterCriteria criteria,
-            Pageable pageable
-    ) {
-        List<Specification<GroupEntity>> specs = new ArrayList<>();
+    public Page<@NotNull GroupRowProjection> findAllByCriteria(GroupFilterCriteria criteria, Pageable pageable) {
+        List<Specification<@NotNull GroupEntity>> specs = new ArrayList<>();
 
         if (criteria.getStatus() != null) specs.add(hasStatus(criteria.getStatus()));
         if (criteria.getGroupName() != null) specs.add(nameLike(criteria.getGroupName()));
@@ -86,12 +76,9 @@ class SqlGroupRepositoryAdapter implements GroupRepositoryPort {
     }
 
     @Override
-    public Page<GroupRowProjection> findAllByCriteriaAndContainsCloudResourceAccess(
-            GroupFilterCriteria criteria,
-            Pageable pageable,
-            Set<CloudResourceAccessId> cloudResourceAccesses
-    ) {
-        List<Specification<GroupEntity>> specs = new ArrayList<>();
+    public Page<@NotNull GroupRowProjection> findAllByCriteriaAndContainsCloudResourceAccess(
+            GroupFilterCriteria criteria, Pageable pageable, Set<CloudResourceAccessId> cloudResourceAccesses) {
+        List<Specification<@NotNull GroupEntity>> specs = new ArrayList<>();
 
         if (criteria.getStatus() != null) {
             specs.add(hasStatus(criteria.getStatus()));
@@ -105,97 +92,84 @@ class SqlGroupRepositoryAdapter implements GroupRepositoryPort {
         return getGroupRowProjections(criteria, pageable, specs);
     }
 
-    private Page<GroupRowProjection> getGroupRowProjections(GroupFilterCriteria criteria, Pageable pageable, List<Specification<GroupEntity>> specs) {
+    private Page<@NotNull GroupRowProjection> getGroupRowProjections(
+            GroupFilterCriteria criteria, Pageable pageable, List<Specification<@NotNull GroupEntity>> specs) {
         if (criteria.getPastExpiresDate() != null) {
             specs.add(hasPastExpiresDate());
         }
 
-        Specification<GroupEntity> finalSpec = specs.stream()
-                .reduce(Specification::and)
-                .orElse(null);
+        Specification<@NotNull GroupEntity> finalSpec =
+                specs.stream().reduce(Specification::and).orElse(null);
 
-        return groupJpaRepository.findAll(finalSpec, pageable)
-                .map(entity -> new GroupRowProjection() {
-                    @Override
-                    public UUID getUuid() {
-                        return entity.getUuid();
-                    }
+        return groupJpaRepository.findAll(finalSpec, pageable).map(entity -> new GroupRowProjection() {
+            @Override
+            public UUID getUuid() {
+                return entity.getUuid();
+            }
 
-                    @Override
-                    public String getName() {
-                        return entity.getName();
-                    }
+            @Override
+            public String getName() {
+                return entity.getName();
+            }
 
-                    @Override
-                    public String getSemester() {
-                        return entity.getSemester();
-                    }
+            @Override
+            public String getSemester() {
+                return entity.getSemester();
+            }
 
-                    @Override
-                    public LocalDate getEndDate() {
-                        return entity.getEndDate();
-                    }
+            @Override
+            public LocalDate getEndDate() {
+                return entity.getEndDate();
+            }
 
-                    @Override
-                    public Set<UUID> getLecturers() {
-                        return entity.getLecturers();
-                    }
+            @Override
+            public Set<UUID> getLecturers() {
+                return entity.getLecturers();
+            }
 
-                    @Override
-                    public Set<UUID> getCloudResourceAccesses() {
-                        return entity.getCloudResourceAccesses();
-                    }
-                });
+            @Override
+            public Set<UUID> getCloudResourceAccesses() {
+                return entity.getCloudResourceAccesses();
+            }
+        });
     }
 
     @Override
     public List<GroupCloudDto> findActiveGroups() {
-        return groupJpaRepository.findAllProjectedByGroupStatus(GroupStatus.Type.ACTIVE)
-                .stream()
+        return groupJpaRepository.findAllProjectedByGroupStatus(GroupStatus.Type.ACTIVE).stream()
                 .map(groupCloudDtoProjection -> {
                     GroupUniqueName groupUniqueName = GroupUniqueName.fromString(
-                            groupCloudDtoProjection.getName() + " " + groupCloudDtoProjection.getSemester()
-                    );
+                            groupCloudDtoProjection.getName() + " " + groupCloudDtoProjection.getSemester());
                     return new GroupCloudDto(
                             groupUniqueName,
-                            groupCloudDtoProjection.getCloudResourceAccesses()
-                                    .stream()
+                            groupCloudDtoProjection.getCloudResourceAccesses().stream()
                                     .map(CloudResourceAccessId::of)
-                                    .collect(Collectors.toList())
-                    );
-                }).toList();
+                                    .collect(Collectors.toList()));
+                })
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public GroupDto findByCloudResourceAccessId(CloudResourceAccessId cloudResourceAccessId) {
-        return Optional.ofNullable(groupJpaRepository.findByCloudResourceAccessesContaining(cloudResourceAccessId.getValue()))
+        return Optional.ofNullable(
+                        groupJpaRepository.findByCloudResourceAccessesContaining(cloudResourceAccessId.getValue()))
                 .map(entity -> new GroupDto(
-                        entity.getLecturers()
-                                .stream()
-                                .map(UserId::of)
-                                .collect(Collectors.toSet())
-                ))
+                        entity.getLecturers().stream().map(UserId::of).collect(Collectors.toSet())))
                 .orElse(new GroupDto(Collections.emptySet()));
     }
 }
 
 @Repository
-interface GroupJpaRepository extends JpaRepository<GroupEntity, UUID> {
+interface GroupJpaRepository extends JpaRepository<@NotNull GroupEntity, @NotNull UUID> {
 
     GroupDetailsProjection findGroupDetailsByUuid(UUID uuid);
 
-    boolean existsByNameAndSemester(
-            String name,
-            String semester
-    );
+    boolean existsByNameAndSemester(String name, String semester);
 
     boolean existsById(@NonNull UUID uuid);
 
-    Page<GroupEntity> findAll(
-            Specification<GroupEntity> finalSpec,
-            Pageable pageable
-    );
+    Page<@NotNull GroupEntity> findAll(Specification<@NotNull GroupEntity> finalSpec, Pageable pageable);
 
     List<GroupCloudDtoProjection> findAllProjectedByGroupStatus(GroupStatus.Type groupStatus);
 
@@ -206,6 +180,8 @@ interface GroupJpaRepository extends JpaRepository<GroupEntity, UUID> {
 interface GroupCloudDtoProjection {
 
     String getName();
+
     List<UUID> getCloudResourceAccesses();
+
     String getSemester();
 }
